[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']

[project]
name = "dro"
description = "DRO"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "Malte Londschien", email = "malte@londschien.ch" },
]
urls = {homepage = "https://github.com/mlondschien/dro"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python"
]
dependencies = [
    "lightgbm"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "dro"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.setuptools]
py-modules = ["dro"]